--- a/index.html
+++ b/index.html
@@ -318,13 +318,13 @@
 
     <script>
         // 店鋪年度目標映射（只使用年度目標識別）
-        const storeYearTargets = {
-            425500: '中港店',
-            280000: '中友店',
-            85000: '台中三井店',
-            110000: '耐斯店',
-            120000: '垂楊店'
-        };
+        const storeConfig = {
+           3: { name: '中港店', yearTarget: 425500 },    // Excel A6
+           4: { name: '中友店', yearTarget: 280000 },    // Excel A7
+           5: { name: '台中三井店', yearTarget: 85000 },  // Excel A8
+           8: { name: '耐斯店', yearTarget: 110000 },    // Excel A11
+          13: { name: '垂楊店', yearTarget: 120000 }    // Excel A16
+         };
 
         const uploadArea = document.getElementById('uploadArea');
         const fileInput = document.getElementById('fileInput');
