--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
             min-width: 1200px;
         }
 
-        /* 【修改點 1.1】表頭配色：淺灰色背景，深色字體 */
+        /* 【最終修改點 1】表頭 (Level 1) 配色：中度淺灰色，顏色比 Level 2 深 */
         thead {
-            background: #f5f5f5; /* 淺灰色 */
+            background: #dee2e6; /* 中度淺灰 */
             color: #333; /* 深色字體 */
         }
         
-        /* 【修改點 1.2】第二層標題顏色略深 */
+        /* 【最終修改點 2】第二層標題 (Level 2) 顏色：極淺灰色，顏色比 Level 1 淺 */
         thead tr:nth-child(2) {
-            background: #e9ecef; /* 略深的淺灰 */
+            background: #f1f3f5; /* 極淺灰色 */
         }
 
         th {
@@ -180,7 +180,7 @@
             color: #333;
         }
         
-        /* 【修改點 2】數據主體統一使用白色底 */
+        /* 數據主體統一使用白色底 */
         tbody tr:nth-child(odd),
         tbody tr:nth-child(even) {
             background-color: white; 
