--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                                 <th>同期實績<br><small>(去年)</small></th>
                                 <th>成長比</th>
                                 <th>成長金額</th>
-                                <th>月計達成率<br><small>(年度)</small></th>
+                                <th>年度達成率<br><small>(年度)</small></th>
                                 <th>目標差距<br><small>(年度)</small></th>
                             </tr>
                         </thead>
