--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <p style="font-size: 14px; color: #94a3b8;">
                     支援格式：json
                 </p>
-                <input type="file" id="fileInput" accept=".json">
+                <input type="file" id="fileInput" accept=".json,application/json,text/*,*/*">
             </div>
         </div>
 
